--- a/leader-board-css.html
+++ b/leader-board-css.html
@@ -6,52 +6,228 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- fontawsome -->
+    <script src="https://kit.fontawesome.com/14925bcd37.js" crossorigin="anonymous"></script>
+    <!-- stylesheet -->
     <link rel="stylesheet" href="leader-board-css.css">
 </head>
 
 <body>
-    <!-- header Start -->
+    <!------- header Start ------->
     <header>
 
     </header>
-    <!-- header end -->
+    <!------ header end ------->
     <main>
-        <!-- top player & top blog -->
+        <!-- ------- top player & top blog -------->
         <section>
             <div class="top-players container">
-                <h2 Class="player-name">
-                    Top players
-                </h2>
+                <div class="section-top">
+                    <h2 Class="Top-player">
+                        Top players
+                    </h2>
+                </div>
                 <div class="players">
                     <div class="player"><img src="leader-board-main/images/players/player-1.png" alt="">
-                        <h3 Class="player-name">
+                        <h2 Class="player-name">
                             Top Player 1
-                        </h3>
+                        </h2>
                     </div>
                     <div class="player"><img src="leader-board-main/images/players/player-2.png" alt="">
-                        <h3 Class="player-name">
+                        <h2 Class="player-name">
                             Top Player 2
-                        </h3>
+                        </h2>
                     </div>
                     <div class="player"><img src="leader-board-main/images/players/player-3.png" alt="">
-                        <h3 Class="player-name">
+                        <h2 Class="player-name">
                             Top Player 3
-                        </h3>
+                        </h2>
                     </div>
                     <div class="player"><img src="leader-board-main/images/players/player-4.png" alt="">
-                        <h3 Class="player-name">
+                        <h2 Class="player-name">
                             Top Player 4
-                        </h3>
+                        </h2>
                     </div>
                     <div class="player"><img src="leader-board-main/images/players/player-5.png" alt="">
-                        <h3 Class="player-name">
+                        <h2 Class="player-name">
                             Top Player 5
-                        </h3>
+                        </h2>
                     </div>
                     <div class="player"><img src="leader-board-main/images/players/player-6.png" alt="">
-                        <h3 Class="player-name">
+                        <h2 Class="player-name">
                             Top Player 6
+                        </h2>
+                    </div>
+                </div>
+                <hr>
+
+                <div class="section-top">
+                    <h2 class="Top-player">
+                        Top Blogs
+                    </h2>
+                </div>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="leader-board-main/images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-detail">
+                            <h3 class="blog-title">
+                                13 of My Favorite <br>
+                                UI/UX Goodies
+                            </h3>
+                            <p class="author">
+                                by: <a href="">Danny Sapio</a>
+                            </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="leader-board-main/images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-detail">
+                            <h3 class="blog-title">
+                                13 of My Favorite <br>
+                                UI/UX Goodies
+                            </h3>
+                            <p class="author">
+                                by: <a href="">Danny Sapio</a>
+                            </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="leader-board-main/images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-detail">
+                            <h3 class="blog-title">
+                                13 of My Favorite <br>
+                                UI/UX Goodies
+                            </h3>
+                            <p class="author">
+                                by: <a href="">Danny Sapio</a>
+                            </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="leader-board-main/images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-detail">
+                            <h3 class="blog-title">
+                                13 of My Favorite <br>
+                                UI/UX Goodies
+                            </h3>
+                            <p class="author">
+                                by: <a href="">Danny Sapio</a>
+                            </p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+        <!-- Latest Courses -->
+        <section class="container">
+            <h3>
+                Latest Courses
+            </h3>
+            <div class="courses">
+                <div class="course">
+
+
+                    <div class="course-banner">
+                        <img src="leader-board-main/images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">
+                            React - The Complete
+                            Guide 2020
                         </h3>
+                        <p class="author">
+                            <a href="">Reed Krakoff</a>
+                        </p>
+                        <div class="course-info">
+                            <div class="rating">
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star empty"></i>
+                            </div>
+                            <div>
+                                <p>
+                                    4.5
+                                </p>
+                            </div>
+                            <div class="course-duration">
+                                <i class="fa-solid fa-clock"></i>
+                                01:30 hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="leader-board-main/images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">
+                            React - The Complete
+                            Guide 2020
+                        </h3>
+                        <p class="author">
+                            <a href="">Reed Krakoff</a>
+                        </p>
+                        <div class="course-info">
+                            <div class="rating">
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star empty"></i>
+                            </div>
+                            <div>
+                                <p>
+                                    4.5
+                                </p>
+                            </div>
+                            <div class="course-duration">
+                                <i class="fa-solid fa-clock"></i>
+                                01:30 hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="leader-board-main/images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">
+                            React - The Complete
+                            Guide 2020
+                        </h3>
+                        <p class="author">
+                            <a href="">Reed Krakoff</a>
+                        </p>
+                        <div class="course-info">
+                            <div class="rating">
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star empty"></i>
+                            </div>
+                            <div>
+                                <p>
+                                    4.5
+                                </p>
+                            </div>
+                            <div class="course-duration">
+                                <i class="fa-solid fa-clock"></i>
+                                01:30 hr
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
